--- a/claim-service/src/main/resources/application.properties
+++ b/claim-service/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.h2.console.enabled=true
 server.port=8082
 spring.datasource.url=jdbc:h2:mem:claim-db
 spring.cloud.config.enabled=false
-spring.cloud.discovery.enabled=false
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+management.endpoints.web.exposure.include=*
