--- a/gateway-service/src/main/resources/app.yml
+++ b/gateway-service/src/main/resources/app.yml
@@ -11,6 +11,10 @@ spring:
             uri: http://localhost:8082/
             predicates:
               - Path=/claims/**
+          - id : r3
+            uri : http://localhost:8083/
+            predicates :
+              - Path=/notifications/**
       globals:
         corsConfigurations:
           '[/**]':
